# Ingenieria-Informatica

./: .gitignore  README.md
AL/PRACTICA1/: ClaseTiempo.hpp  burbuja.eps  burbuja.sh  burbuja.txt  frecuencias.eps  frecuencias.sh  frecuencias.txt  funcionesAuxiliares.cpp  funcionesAuxiliares.hpp  main.cpp  makefile  metodos.cpp  metodos.hpp
AL/PRACTICA2/: ClaseTiempo.hpp  funcionesAuxiliares.cpp  funcionesAuxiliares.hpp  iterativo.eps  iterativo.sh  iterativo.txt  main.cpp  makefile  noRecursivo.txt  opciones.cpp  opciones.hpp  recursivo.eps  recursivo.sh  recursivo.txt  recursivoTablas.eps  recursivoTablas.sh  recursivoTablas.txt  torresHanoi.eps  torresHanoi.sh  torresHanoi.txt
AL/PRACTICA3/: conjunto.hpp  funcionesAuxiliares.cpp  funcionesAuxiliares.hpp  main.cpp
AL/PRACTICA4/: conjunto.hpp  funcionesAuxiliares.cpp  funcionesAuxiliares.hpp  main.cpp  material.hpp  valoresConjunto.txt  valoresMateriales.txt
AL/PRACTICA5/: funcionesAuxiliares.cpp  funcionesAuxiliares.hpp  main.cpp  makefile  valoresConjunto.txt  valoresMateriales.txt
AL/PRACTICA6/: funcionesAuxiliares.cpp  funcionesAuxiliares.hpp  main.cpp  makefile
FSIV/Práctica 5/: CMakeLists.txt  lbp.cpp  test_lbp.cpp
SO 2018/: ejercicio2.c  ejercicio3a.c  ejercicio3c.c
fsiv/Práctica 3/: CMakeLists.txt  practica3.cpp
fsiv/Práctica 4/: CMakeCache.txt  CMakeLists.txt  Makefile  augReal  augReal.cpp  cmake_install.cmake  configuration.xml  intrinsics.yml  out_camera_data.yml
fsiv/Práctica 4/images/: imagenes.xml
so 2018/: ejercicio3b.c
trabajo-practicas/: Control_de_tareas.txt
(+367 files in other folders)
